--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-vue": "^9.32.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
-    "prettier": "^3.5.1"
+    "prettier": "^3.5.1",
+    "vue-eslint-parser": "^9.4.3"
   }
 }
