--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.4.7",
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
     "vue": "latest",
