--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
