--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.1",
-    "vue-eslint-parser": "^9.4.3"
+    "vue-eslint-parser": "^9.4.3",
+    "wrangler": "^4.0.0"
   }
 }
