--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^9.2.0",
+    "@nuxtjs/robots": "^5.4.0",
+    "@nuxtjs/sitemap": "^7.4.3",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@pinia/nuxt": "^0.10.1",
     "dotenv": "^16.4.7",
