--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@pinia/nuxt": "^0.10.1",
     "dotenv": "^16.4.7",
     "nuxt": "^3.15.4",
+    "nuxt-gtag": "^3.0.3",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "tailwindcss": "^3.4.17",
