--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "precommit": "eslint --fix \"./**/*.{js,ts,vue}\" && prettier --write \"./**/*.{js,ts,vue,css,scss}\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/vue-fontawesome": "^3.1.1",
     "@googlemaps/js-api-loader": "^1.16.10",
     "@nuxt/image": "^1.9.0",
     "@nuxt/ui": "^2.21.0",
