--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.10",
+    "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.9.0",
     "@nuxt/ui": "^2.21.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/critters": "^0.9.0",
     "@nuxtjs/dotenv": "^1.4.2",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/i18n": "^9.2.0",
+    "@nuxtjs/i18n": "^9.5.6",
     "@nuxtjs/robots": "^5.4.0",
     "@nuxtjs/sitemap": "^7.4.3",
-    "@nuxtjs/tailwindcss": "^6.13.1",
-    "@pinia/nuxt": "^0.10.1",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@pinia/nuxt": "^0.11.2",
     "dotenv": "^16.4.7",
-    "nuxt": "^3.15.4",
+    "nuxt": "^4.0.3",
     "nuxt-gtag": "^3.0.3",
-    "pinia": "^3.0.1",
+    "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.2.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
