--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "preview": "nuxt preview",
     "start": "nuxt preview",
     "postinstall": "nuxt prepare && husky install",
-    "precommit": "eslint --fix \"./**/*.{js,ts,vue}\" && prettier --write \"./**/*.{js,ts,vue,css,scss}\""
+    "precommit": "eslint --fix --ext .js,.ts,.vue ./components ./pages \"./**/*.{js,ts,vue}\" && prettier --write \"./**/*.{js,ts,vue,css,scss}\""
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.10",
@@ -41,17 +41,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "@vite-pwa/nuxt": "^1.0.4",
-    "eslint": "^9.20.1",
+    "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-vue": "^9.32.0",
+    "eslint-plugin-vue": "^10.4.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
-    "prettier": "^3.5.1",
-    "vue-eslint-parser": "^9.4.3",
+    "prettier": "^3.6.2",
+    "vue-eslint-parser": "^10.2.0",
     "wrangler": "^4.0.0"
   }
 }
